# cpp_color_lib

./: CMakeLists.txt  README.md  color.cpp  color.hpp
